--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= yield %>
+    <%= javascript_pack_tag 'application' %>
     <%= javascript_pack_tag 'header_temp' %>
     <%= javascript_pack_tag 'content_temp' %>
     <%= javascript_pack_tag 'foot_temp' %>
