--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <div id="content">
   <%# .preventでhttp通信が行われないようにする %>
   <form v-on:submit.prevent='addMember'>
-    Search member <input name="query" v-model='addQuery'>  <%##%>
+    Search member <input name="query" v-model='addQuery'>
     <button>Add member</button>
   </form>
   <member-tag
@@ -20,3 +20,10 @@
 <div id="foot">
   <foot-template></foot-template>
 </div>
+
+<%# このview以外のファイルからも参照できるように設定する %>
+<%# 以下の設定で、content_temp.jsで、members.listで、@membersの値を取得できる %>
+<script>
+members = window.members = {};
+members.list = <%= raw @members.to_json %>
+</script>
